# nature_of_elixir_nif

./: .gitignore  .tool-versions  AGENTS.md  PLAN.md  README.md
.github/workflows/: lab.yml
docker/: Dockerfile.elixir_rust  docker-compose.yml  entrypoint.sh
docs/: 00_charter.md  01_beam_scheduler_model.md  02_nif_taxonomy_rustler.md  03_measurement_protocol.md  04_experiment_catalog.md  05_safety_isolation.md  06_reproducibility_protocol.md  07_ui_architecture.md  08_final_report_rubric.md  09_architecture.md  10_development_guide.md  11_commit_convention.md  12_glossary.md  13_runbook.md  INDEX.md
docs/adr/: 0001_one_native_crate.md  0002_isolated_child_beam_for_crashes.md  0003_liveview_over_grafana.md  0004_strict_threshold_assertions.md  0005_docker_first_execution.md  0006_real_stack_postgres_oban.md  0007_pdfium_for_pdf_workload.md  0008_ui_primary_cli_for_ci.md  README.md
experiments/E01_cpu_normal_nif/: README.md  config.exs  e01_test.exs
experiments/E02_cpu_dirty_nif/: README.md  config.exs  e02_test.exs
experiments/E03_infinite_loop/: README.md  config.exs  e03_test.exs
experiments/E04_sleeping_normal_nif/: README.md  config.exs  e04_test.exs
reports/: FINAL_REPORT.md
scripts/: build_all.sh  collect_metrics.sh  enter_lab.sh  generate_report.sh  run_experiment.sh
umbrella/: .formatter.exs  README.md  mix.exs
umbrella/apps/lab_native/native/lab_native/: Cargo.toml
umbrella/apps/lab_native/native/lab_native/src/: lib.rs
umbrella/apps/lab_port/native/lab_port/: Cargo.toml
umbrella/apps/lab_port/native/lab_port/src/: main.rs
(+106 files in other folders)
