[package]
name = "lab_port"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "lab_port"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Allow panics to propagate (the port process dies, BEAM survives — E17)
panic = "unwind"
opt-level = 3
